[Add Unit Test]